<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>num_sdk_msgs</name>
  <version>0.2.0</version>
  <description>Contains message and service definitions used by Numurus nodes.</description>
  <maintainer email="support@numurus.com">Numurus</maintainer>

  <license>MIT</license>

  <url type="website">https://www.numurus.com/</url>
  <url type="repository">https://bitbucket.org/numurus/num_sdk_msgs/src/master/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
